[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/atlasica/dock/FileInput.gd" type="Script" id=1]
[ext_resource path="res://addons/atlasica/dock/IconLabel.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="FileInput" type="PanelContainer"]
margin_right = 167.0
margin_bottom = 24.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
get_from_state_initially = null

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 290.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconLabel" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_right = 100.0
icon = 3

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 290.0
margin_bottom = 30.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
text = "Select file..."
caret_position = 14

[node name="Button" type="ToolButton" parent="."]
margin_right = 290.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
